deploy/etherpad/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: opengauss-etherpad
  name: opengauss-etherpad
