deploy/etherpad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etherpad-lite
  namespace: opengauss-etherpad
spec:
  ports:
  - name: ether-http
    port: 80
    protocol: TCP
    targetPort: 9001
  selector:
    app: control-etherpad
  sessionAffinity: None
  type: ClusterIP
